--- a/Coldairarrow.Web/Views/Home/Index.cshtml
+++ b/Coldairarrow.Web/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
             <!-- Logo -->
             <a href="#" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>Colder 1</b></span>
+                <span class="logo-mini"><b>T.M.C</b></span>
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg"><b>T.M.C</b></span>
             </a>
