Ajustes para fechas de estados de ganado

--- a/Coldairarrow.Web/Areas/Ganaderia/Views/Gnd_Inventario/Form.cshtml
+++ b/Coldairarrow.Web/Areas/Ganaderia/Views/Gnd_Inventario/Form.cshtml
@@ -74,6 +74,70 @@
                 <div class="help-block with-errors"></div>
             </div>
         </div>
+        <div class="form-group form-group-sm">
+            <label class="col-sm-2 control-label">Consecutivo</label>
+            <div class="col-sm-5">
+                <input id="Codigo" name="Codigo" value="@obj.Codigo" type="text" class="form-control" maxlength="3" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" required>
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm">
+            <label class="col-sm-2 control-label">Madre</label>
+            <div class="col-sm-5">
+                <select id="parentList" class="selectpicker form-control" name="parentList" data-style="btn-default btn-sm" title="Select one"></select>
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm">
+            <label class="col-sm-2 control-label">Estado</label>
+            <div class="col-sm-5">
+                <select id="statusList" name="statusList" class="selectpicker form-control" data-style="btn-default btn-sm" required>
+                    <option value="1">Activo</option>
+                    <option value="2">Vendido</option>
+                    <option value="3">Muerto</option>
+                    <option value="4">Robo Pérdida</option>
+                </select>
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm">
+            <label class="col-sm-2 control-label">Es comprado?</label>
+            <div class="col-sm-5">
+                <select id="buyedList" name="buyedList" class="selectpicker form-control" data-style="btn-default btn-sm">
+                    <option value="0" selected>No</option>
+                    <option value="1">Si</option>
+                </select>
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm" id="container" style="position:relative">
+            <label class="col-sm-2 control-label">Fecha Compra</label>
+            <div class="col-sm-5" style="position:relative">
+                <input id="FechaCompra" name="FechaCompra" type="text" value="@(obj.FechaCompra != null ? obj.FechaCompra?.ToString("yyyy-MM-dd"): null)" data-date-format="yyyy-mm-dd" class="form-control" autocomplete="off">
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm" id="container" style="position:relative">
+            <label class="col-sm-2 control-label">Fecha Venta</label>
+            <div class="col-sm-5" style="position:relative">
+                <input id="FechaVenta" name="FechaVenta" type="text" value="@(obj.FechaVenta != null ? obj.FechaVenta?.ToString("yyyy-MM-dd"): null)" data-date-format="yyyy-mm-dd" class="form-control" required autocomplete="off">
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm" id="container" style="position:relative">
+            <label class="col-sm-2 control-label">Fecha Muerte</label>
+            <div class="col-sm-5" style="position:relative">
+                <input id="FechaDeceso" name="FechaDeceso" type="text" value="@(obj.FechaDeceso != null ? obj.FechaDeceso?.ToString("yyyy-MM-dd"): null)" data-date-format="yyyy-mm-dd" class="form-control" required autocomplete="off">
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
+        <div class="form-group form-group-sm" id="container" style="position:relative">
+            <label class="col-sm-2 control-label">Fecha Robo Perdida</label>
+            <div class="col-sm-5" style="position:relative">
+                <input id="FechaPerdida" name="FechaPerdida" type="text" value="@(obj.FechaPerdida != null ? obj.FechaPerdida?.ToString("yyyy-MM-dd"): null)" data-date-format="yyyy-mm-dd" class="form-control" required autocomplete="off">
+                <div class="help-block with-errors"></div>
+            </div>
+        </div>
         <div class="form-group">
             <button id="submit" type="submit" class="hidden">提交</button>
         </div>
@@ -84,20 +148,14 @@
     var ownerId = @obj.IdPropietario;
     var farmId = @obj.IdFinca;
     var typeId = @obj.IdTipoInventario;
+    var parentId = Number('@obj.IdPadre');
+    var statusId = @obj.IdEstado;
 
     $(function () {
         initEvent();
     });
 
-    function changeGenre(value) {
-        $('#genreList').selectpicker({
-            value: value
-        });
-    }
-
-    //事件绑定
-    function initEvent() {
-
+    function initOwnerList() {
         $('#ownerList').selectpicker({
             url: '/Ganaderia/Gnd_Propietario/GetDataList_NoPagin',
             value: ownerId,
@@ -111,7 +169,9 @@
                 $(this).selectpicker('val', ownerId);
             }
         });
+    }
 
+    function initFarmList() {
         $('#farmList').selectpicker({
             url: '/Ganaderia/Gnd_Finca/GetDataList_NoPagin',
             value: farmId,
@@ -125,8 +185,9 @@
                 $(this).selectpicker('val', farmId);
             }
         });
+    }
 
-
+    function initTypeList() {
         $('#typeList').selectpicker({
             url: '/Ganaderia/Gnd_TipoInventario/GetDataList_NoPagin',
             value: typeId,
@@ -144,14 +205,9 @@
             let idSexo = $(this).data("option").data[e.currentTarget.selectedIndex - 1].IdSexo;
             changeGenre(idSexo);
         });
+    }
 
-        $('#FechaNacimiento').datetimepicker({
-            language: 'es',
-            minView: 2//日期选择
-        });
-
-        changeGenre(theEntity.Sexo);
-
+    function initImageField() {
         $('#ImagenFile').on('change', function () {
             $('#ImagenFile').getFileBase64(function (base64, fileName) {
                 $('#imgLoaded').attr('src', "data:image/png;base64, " + base64);
@@ -159,14 +215,134 @@
                 theEntity['ImagenBase64'] = base64;
             });
         });
+    }
 
+    function changeGenre(value) {
+        $('#genreList').selectpicker({
+            value: value
+        });
+    }
+
+    function initStatusList(value) {
+        $('#statusList').selectpicker({
+            value: value
+        });
+    }
+
+    function initBuyedList(value) {
+        $('#buyedList').selectpicker({
+            value: value ? 1 : 0
+        });
+    }
+
+    function createDateControl(name) {
+        $('#' + name).datetimepicker({
+            language: 'es',
+            minView: 2//日期选择
+        });
+    }
+
+    function initParentList() {
+        $('#parentList').selectpicker({
+            url: '/Ganaderia/Gnd_Inventario/GetParentsDataList_NoPagin',
+            value: parentId,
+            valueField: 'Id',
+            textField: 'Descripcion',
+            pleaseSelect: false
+        });
+        $('#parentList').on('refreshed.bs.select', function (e) {
+            // calls on data loaded
+            if (parentId > 0) {
+                $(this).selectpicker('val', parentId);
+            }
+        });
+    }
+
+    function initChildrenList() {
         $('#hasChildrenList').selectpicker({
             value: theEntity.EsPadre ? 1 : 0
         });
+    }
 
+    function checkImageUrl() {
         if (theEntity.ImagenUrl) {
             $('#imgLoaded').attr('src', theEntity.ImagenUrl);
         }
+    }
+
+    function setStatusEvent(value) {
+        switch (Number(value)) {
+            case 1:
+                hideFormFields(['FechaDeceso', 'FechaVenta', 'FechaPerdida']);
+                break;
+            case 2:
+                hideFormFields(['FechaDeceso', 'FechaPerdida']);
+                showFormFields(['FechaVenta']);
+                break;
+            case 3:
+                hideFormFields(['FechaVenta', 'FechaPerdida']);
+                showFormFields(['FechaDeceso']);
+                break;
+            case 4:
+                hideFormFields(['FechaDeceso', 'FechaVenta']);
+                showFormFields(['FechaPerdida']);
+                break;
+            default:
+                break;
+        }
+    }
+
+    function setBuyedStatusEvent(value) {
+        if (value) {
+            setFieldRequired('FechaCompra');
+        } else {
+            setFieldNotRequired('FechaCompra');
+        }
+    }
+
+    function statusEvent() {
+        $('#statusList').on('changed.bs.select', function (e) {
+            // calls on data loaded
+            let idEstado = $(this).val();
+            setStatusEvent(idEstado);
+        });
+    }
+
+    function statusBuyedEvent() {
+        $('#buyedList').on('changed.bs.select', function (e) {
+            // calls on data loaded
+            let esCompra = Number($(this).val()) == 1;
+            setBuyedStatusEvent(esCompra);
+        });
+    }
+
+    //事件绑定
+    function initEvent() {
+
+        initOwnerList();
+        initFarmList();
+        initTypeList();
+
+        createDateControl("FechaNacimiento");
+        createDateControl("FechaCompra");
+        createDateControl("FechaDeceso");
+        createDateControl("FechaVenta");
+        createDateControl("FechaPerdida");
+
+        hideFormFields(['FechaDeceso', 'FechaVenta', 'FechaPerdida']);
+        changeGenre(theEntity.Sexo);
+        
+        initImageField();
+        initChildrenList();
+        checkImageUrl();
+        initParentList();
+        getNexCode();
+        initStatusList(theEntity.IdEstado);
+        initBuyedList(theEntity.EsCompra);
+        setStatusEvent(theEntity.IdEstado);
+        setBuyedStatusEvent(theEntity.EsCompra);
+        statusEvent();
+        statusBuyedEvent();
 
         //表单校验
         $('#form').validator().on('submit', function (e) {
@@ -181,6 +357,9 @@
                 theEntity['IdTipoInventario'] = $('#typeList').val();
                 theEntity['Sexo'] = $('#genreList').val();
                 theEntity['EsPadre'] = Number($('#hasChildrenList').val()) == 1;
+                theEntity['IdEstado'] = $('#statusList').val();
+                if ($("#parentList").val()) theEntity['IdPadre'] = $("#parentList").val();
+                theEntity['EsCompra'] = Number($('#buyedList').val()) == 1;
                 loading();
                 $.postJSON('/Ganaderia/Gnd_Inventario/SaveData', theEntity, function (resJson) {
                     loading(false);
@@ -196,6 +375,49 @@
                 });
             }
         })
+    }
+
+    function getNexCode() {
+        if (theEntity.Id > 0) {
+            return;
+        }
+        loading(true);
+        $.postJSON('/Ganaderia/Gnd_Inventario/GetNextCode', {}, function (resJson) {
+            loading(false);
+            if (Number(resJson) > 0) {
+                $("#Codigo").val(Number(resJson));
+            }
+        });
+    }
+
+    function hideFormFields(arrayFields) {
+        arrayFields.forEach(item => {
+            setFieldNotRequired(item);
+            hideControl(item);
+        });
+    }
+
+    function showFormFields(arrayFields) {
+        arrayFields.forEach(item => {
+            setFieldRequired(item);
+            showControl(item);
+        });
+    }
+
+    function setFieldRequired(name) {
+        $("#" + name).prop('required', true);
+    }
+
+    function setFieldNotRequired(name) {
+        $("#" + name).removeAttr('required');
+    }
+
+    function showControl(control) {
+        $("#" + control).parent().parent().show();
+    }
+
+    function hideControl(control) {
+        $("#" + control).parent().parent().hide();
     }
 
     //提交表单
