--- a/Coldairarrow.Web/Views/Home/Login.cshtml
+++ b/Coldairarrow.Web/Views/Home/Login.cshtml
@@ -27,31 +27,31 @@
 <body class="hold-transition login-page" style="height:80%">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>HQ MAINTENANCE</b></a>
+            <a href="#"><b>GANADERÍA</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
             @*<p class="login-box-msg">Sign in to start your session</p>*@
             <form id="form" role="form">
                 <div class="form-group has-feedback">
-                    <input id="userName" name="userName" type="text" class="form-control" required placeholder="User name">
+                    <input id="userName" name="userName" type="text" class="form-control" required placeholder="Usuario">
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                     <div class="help-block with-errors"></div>
                 </div>
                 <div class="form-group has-feedback">
-                    <input id="password" name="password" type="password" required class="form-control" placeholder="Password">
+                    <input id="password" name="password" type="password" required class="form-control" placeholder="Clave">
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     <div class="help-block with-errors"></div>
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
-                            <input type="checkbox" id="savePwd"><label style="padding-left:5px" for="savePwd">Remember</label>
+                            <input type="checkbox" id="savePwd"><label style="padding-left:5px" for="savePwd">Recordar</label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Log in</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
                     </div>
                     <!-- /.col -->
                 </div>
