--- a/Coldairarrow.Web/Areas/Ganaderia/Views/Gnd_Inventario/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Ganaderia/Views/Gnd_Inventario/Index.cshtml
@@ -26,7 +26,7 @@
                 <select class="selectpicker" name="condition" data-style="btn-default btn-sm" data-width="100px">
                     <option value="">Seleccione</option>
                     <option value="Propietario">Propietario</option>
-                    <option value="Descripcion">Descripcion</option>
+                    <option value="CodigoBusqueda">Consecutivo</option>
                 </select>
                 <input type="text" class="form-control input-sm" name="keyword" placeholder="Ingrese Texto">
             </div>
@@ -65,6 +65,7 @@
             pageNumber: 1,
             pageSize: 5,
             pageList: [5, 10, 25, 50],
+            sortName: 'Codigo',
             columns: [
                 { title: 'ck', field: 'ck', checkbox: true, width: '3%' },
                 { title: 'Consec.', field: 'Codigo', width: '5%' },
