Ajuste para que la ruta de descarga se configure desde appsettings

--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_Herramientas/Index.cshtml
@@ -47,12 +47,12 @@
 </div>
 <script>
     var $table = $('#dataTable');
-    var raiz = '@GlobalSwitch.WebRootUrl';
+    var raiz = '/';
 
     $(function () {
         initTable();
         bindEvent();
-        raiz = raiz + "/";
+        //raiz = raiz + "/";
         $('[data-toggle="tooltip"]').tooltip();
     });
 
