--- a/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_TipoHerramienta/Index.cshtml
+++ b/Coldairarrow.Web/Areas/Mantenimiento/Views/Wtf_TipoHerramienta/Index.cshtml
@@ -45,12 +45,12 @@
 </div>
 <script>
     var $table = $('#dataTable');
-    var raiz = '@GlobalSwitch.WebRootUrl';
+    var raiz = '/';
 
     $(function () {
         initTable();
         bindEvent();
-        raiz = raiz + "/";
+        //raiz = raiz + "/";
         $('[data-toggle="tooltip"]').tooltip();
     });
 
