--- a/Coldairarrow.Web/Views/Home/Login.cshtml
+++ b/Coldairarrow.Web/Views/Home/Login.cshtml
@@ -27,7 +27,8 @@
 <body class="hold-transition login-page" style="height:80%">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>HQ MAINTENANCE</b></a>
+            <img src="~/Imagen/logo1.svg" alt="GEO">
+            <a href="#"><b>TOOLS</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
