--- a/Coldairarrow.Web/Views/Home/Index.cshtml
+++ b/Coldairarrow.Web/Views/Home/Index.cshtml
@@ -48,9 +48,9 @@
             <!-- Logo -->
             <a href="#" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>Colder 1</b></span>
+                <span class="logo-mini"><b><img src="~/Imagen/logo_mini.svg"/></b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>T.M.C</b></span>
+                <span class="logo-lg"><b><img src="~/Imagen/logo_h.svg" /></b></span>
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
